--- a/src/main/resources/templates/fragments/experiencialaboral/experienciaform.html
+++ b/src/main/resources/templates/fragments/experiencialaboral/experienciaform.html
@@ -135,9 +135,28 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
             </div>
                 <div class="form-group">
+                <label class="col-sm-3 control-label">Categoria Laboral(*):</label>
+                <div class="col-sm-4">
+                    <select class="form-control" name="categorialaboral" th:field="*{categorialaboral}" onchange="salarios(this.value);">
+                            <!--th:field="*{estadofamiliar}">-->
+                              <option value="">--seleccione la Categoria Laboral--</option>
+                        <option value="Pasantia Remunerada">Pasantia Remunerada</option>
+                        <option value="Pasantia no Remunerada">Pasantia no Remunerada</option>
+                         <option value="Horas Sociales">Horas Sociales</option>
+                        <option value="Voluntariado">Voluntariado</option>
+                        <option value="Asalariado">Asalariado</option>
+                    </select>
+                </div>
+                <div class="popup "><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup8')" onmouseout ="javascript:ocultarAyuda('poppup8')">a</a></b>
+                        
+                        <span class="popuptext" id="poppup8">seleccione la Categoria Laboral del Empleado desplegando la lista.!</span>
+                    </div>
+            </div>
+                <div class="form-group">
                     <label class="col-sm-3 control-label">Salario inicial $(*):</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control num_decimal3 numeros"  required="true" maxlength="10"    th:field="*{salarioinicial}" />
+                        <input type="text" class="form-control num_decimal3 numeros"  required="true" maxlength="10" id="salarioinicial"   th:field="*{salarioinicial}" onchange="validar_salarios(this.value,$('#salariofinal').val().toString())" />
                     </div>
                      <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup7')" onmouseout ="javascript:ocultarAyuda('poppup7')">a</a></b>
@@ -148,7 +167,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Salario final $(*):</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control num_decimal3 numeros"  required="true" maxlength="10"     th:field="*{salariofinal}" />
+                        <input type="text" class="form-control num_decimal3 numeros"  required="true" maxlength="10"   id="salariofinal"   th:field="*{salariofinal}" onchange="validar_salarios($('#salarioinicial').val().toString(),this.value)" />
                     </div>
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup3')" onmouseout ="javascript:ocultarAyuda('poppup3')">a</a></b>
@@ -158,7 +177,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 </div>
                 
                 <div class="form-group">
-                    <label class="col-sm-3 control-label">Causa del retiro(*):</label>
+                    <label class="col-sm-3 control-label">Causa del movimiento(*):</label>
                     <div class="col-sm-8">
                         <!--<input type="text" class="form-control" required="true" size="200" maxlength="200"   th:field="*{motivoretiro}"  />-->
                     	<textarea rows="4" cols="50" class="form-control" size="200" maxlength="200"  required="true" th:field="*{motivoretiro}">
@@ -217,6 +236,39 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         if(foo[0]!=foo[2]){
                             swal(foo[1], foo[0]);
                         }
+                    }
+                    
+                    function validar_salarios(val1,val2){
+                        
+                        if(val1 == ("") || val2 == ("") ){
+//                             alert("/val1:/"+val1+"/val2:/"+val2);
+                        }else{
+                            var a = parseFloat(val1)
+                            var b = parseFloat(val2)
+                             if(a>b){
+                                   swal("Validacion de Salarios","El Salario Final no debe ser Mayor al inicial" );
+                             }
+                        }
+                        
+                    }
+
+        
+                      function salarios(val){
+//                        alert(val);
+                        var salinicial = document.getElementById("salarioinicial"); 
+                        var salfinal = document.getElementById("salariofinal"); 
+                        if(val.includes("Pasantia no Remunerada") || val.includes("Voluntariado") || val.includes("Horas Sociales")){
+                            $("#salarioinicial").val("0.00"); 
+                            $("#salariofinal").val("0.00");
+                            $('#salarioinicial').prop('disabled', 'disabled');
+                            $('#salariofinal').prop('disabled', 'disabled');
+                        }else{
+                            $('#salarioinicial').prop('disabled', false);
+                            $('#salariofinal').prop('disabled', false);
+//                            salinicial.setAttribute('value', ''); 
+//                            salfinal.setAttribute('value', '');
+                        }
+                        
                     }
 // 		$(document).ready(function() {
 // 			$(function () {
